--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,76 @@
-.boxContainer {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  position: relative; }
-  .boxContainer .boxOne, .boxContainer .boxTwo {
-    width: 400px;
-    height: 400px;
-    border: 1px solid #96227b;
-    background-image: linear-gradient(45deg, red 0%, yellow 50%); }
-  .boxContainer .boxTwo {
-    margin-left: 10px; }
+* {
+  box-sizing: content-box;
+}
 
-@media (max-width: 800px) {
-  .boxContainer {
+header {
+  width: 100%;
+  height: 5%;
+  position: absolute;
+}
+header #hamb,
+header .hamb {
+  display: none;
+}
+header .menu {
+  display: flex;
+  justify-content: right;
+  margin-top: -10px;
+}
+header .menu nav ul {
+  display: flex;
+  margin-right: 8px;
+  font-size: 15px;
+  font-family: fantasy;
+  list-style: none;
+}
+header .menu nav ul li {
+  margin-right: 15px;
+}
+
+@media (max-width: 500px) {
+  header {
     display: flex;
-    flex-direction: column; }
-    .boxContainer .boxOne, .boxContainer .boxTwo {
-      margin-bottom: 10px;
-      margin-left: 10px; } }
+    flex-direction: column;
+    width: 100%;
+  }
+  header #hamb {
+    display: none;
+  }
+  header .hamb {
+    display: flex;
+    justify-content: right;
+    margin-right: 5px;
+  }
+  header .hamb .bars {
+    width: 30px;
+    height: 24px;
+  }
+  header .menu {
+    visibility: collapse;
+    margin-right: 33px;
+  }
+  header .menu nav {
+    background-color: gray;
+    border-radius: 5%;
+  }
+  header .menu nav ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding-left: 20px;
+    margin-right: 0px;
+    padding-right: 20px;
+  }
+  header .menu nav ul li {
+    margin-top: 3px;
+    margin-right: 0px;
+  }
+}
+#hamb:checked,
+#hamb:checked + *,
+#hamb:checked + * + * {
+  visibility: visible;
+}
 
 /*# sourceMappingURL=styles.css.map */
